--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -31,6 +31,17 @@
     <svg class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="7772" width="24" height="24"><path d="M576.8 807.52h57.28l20.8 72.48 100.8-72.48h141.92V229.28H576.8z m67.84-513.92H832v448h-66.24l-85.12 64.96-18.56-64.96h-17.44zM126.4 884.48a149.44 149.44 0 0 0 123.84-10.4c60.96-36 105.92-194.56 105.92-194.56l144 177.44s13.12-84.48-2.24-108.32-99.04-119.84-99.04-119.84l-36.64 32 26.08-104.96H544s0-61.76-30.56-65.28-125.44 0-125.44 0v-192H528s-1.6-64-28.8-64H270.56l35.52-104.64s-57.6 3.36-77.92 39.36-86.4 221.6-86.4 221.6 21.92 10.24 59.2-17.28a147.68 147.68 0 0 0 49.28-75.52l67.84-3.36L320 491.2s-116.96-1.76-140.64 0-37.28 65.28-37.28 65.28H320s-15.2 108.16-60.96 187.2-132.64 140.8-132.64 140.8z" fill="#000000" p-id="7773" data-spm-anchor-id="a313x.search_index.0.i32.37ff3a81Nu8veZ" class="selected"></path></svg>
     </a>
 
+    <a
+        href="mailto:hotelhty@qq.com"
+        target="_blank"
+        class="mx-3"
+        aria-label="E-mail"
+        title="E-mail"
+    >
+    <svg class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1637" width="24" height="24"><path d="M819.2 778.24H225.28a61.44 61.44 0 0 1-61.44-61.44V286.72a61.44 61.44 0 0 1 61.44-61.44h593.92a61.44 61.44 0 0 1 61.44 61.44v430.08a61.44 61.44 0 0 1-61.44 61.44z m-593.92-40.96l184.32-184.32-20.48-20.48-184.32 184.32z m593.92-471.04L532.48 532.48h-20.48L225.28 266.24l-20.48 40.96 307.2 286.72h20.48l307.2-286.72z m-163.84 266.24l-20.48 20.48 184.32 184.32 20.48-20.48z" fill="#000000" p-id="1638" data-spm-anchor-id="a313x.search_index.0.i0.6a103a81UJF0UU" class="selected"></path></svg>
+    </a>
+    
+
     <a href="/rss.xml" target="_blank" class="mx-3" aria-label="RSS Feed" title="RSS Feed">
         <svg
             xmlns="http://www.w3.org/2000/svg"
