--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,26 +11,19 @@ const last_posts = posts.slice(0, 3);
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
-    <div class="text-xl py-1">Hotel</div>
-    <div class="text-5xl font-bold">I'm Hotel</div>
-    <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
+    <div class="text-xl py-1"></div>
+    <div class="text-5xl font-bold">Hotel's Blog 🏠</div>
+    <div class="text-3xl py-3 font-bold"></div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+        我是 <b>Hotel</b>，欢迎来到我的个人博客😊。<br>
+        这里将分享我在 <b>AI</b> 和 <b>CS</b> 领域的技术文档，以及个人经历和思考的随笔记录。
       </text>
-    </div>
-    <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
-      </a>
     </div>
   </div>
 
-  <div>
-    <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
+  <!-- <div>
+    <div class="text-2xl w-full font-bold mb-2">Highlighted projects 🌟</div>
   </div>
 
   <HorizontalCard
@@ -54,10 +47,10 @@ const last_posts = posts.slice(0, 3);
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
     badge="FOSS"
-  />
+  /> -->
 
   <div>
-    <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
+    <div class="text-2xl w-full font-bold mb-5 mt-10">Recent blogs ✒️</div>
   </div>
 
   {
